# weather-cli-widget

./: CMakeLists.txt  README.md  config.json  main.cpp
modules/: CMakeLists.txt
modules/api_processor/: api_processor.cpp  api_processor.h
modules/event_listener/: event_listener.cpp  event_listener.h
modules/output_processor/: output_processor.cpp  output_processor.h
modules/weather_app/: weather_app.cpp  weather_app.h
